force-app/main/default/objects/Zone__c/fields/Pickup_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Serial_Number__c</fullName>
    <defaultValue>100000</defaultValue>
    <label>Pickup Serial Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>