force-app/main/default/objects/Zone__c/fields/Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>Zone_Code__c</fullName>
    <label>Zone Code</label>
    <length>45</length>
    <type>Text</type>
</CustomField>