force-app/main/default/objects/Zone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pickup_Serial_Number__c</columns>
    <columns>Zone_Code__c</columns>
    <columns>Zone_Description__c</columns>
    <columns>Remarks__c</columns>
    <columns>Is_In_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>